2007-12-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (filechooser_response_cb):
	BUGZILLA #501082 – Help button leads to wrong section

2007-11-22  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (baobab_create_toolbar):
        BUGZILLA #498859 - spinner size on startup 
        (by G. Dartiguelongue) 

2007-10-23  Stéphane Loeuillet  <sloeuille@svn.gnome.org>

	* data/baobab.desktop.in.in: Trivial fix to .desktop file
	to conform to latest fd.o .desktop specs.
	Spoted by desktop-file-validate. Fixes #481721

2007-10-16  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c: (check_menu_sens):
	* src/baobab.c: (start_proc_on_dir), (main):
	* src/baobab.h:
        BUGZILLA #487123 - allocated space option works only once

2007-09-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/callbacks.c: (on_about_activate):
	Updated copyright information

2007-09-05  Emmanuele Bassi  <ebassi@gnome.org>

	* src/baobab-scan.c:
	BUGZILLA #473833 - Infinite recursion in /sys

2007-08-01  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c:
	BUGZILLA #462424 - baobab-utils.c unconditionally includes monetary.h

2007-07-17  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (main):
	BUGZILLA #453742 - should display a dialog when there is no disk
	mounted

2007-07-16 Alejandro G. Castro <acastro@igalia.com>

	Patch cotributed by Philippe Gauthier <philippe.gauthier@deuxpi.ca>
	
	* src/baobab-ringschart.c (bug #427126):
	(baobab_ringschart_expose): Fixed a problem with the draw of the
	frozen status of the ringschart widget, we were using the event
	information instead of the widget allocation. Added a cairo_clip
	to avoid uneeded redraws.
	
2007-06-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c: make sure that file chooser pointer
	is nullified upon destruction.

2007-04-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.desktop.in.in:
	BUGZILLA #425530 - Better tooltip required
